<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>leo_gz_plugins</name>
    <version>1.1.0</version>
    <description>Package with plugins for Leo Rover Gazebo simulation in ROS 2</description>
    <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
    <license>MIT</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <!-- Garden -->
    <depend condition="$GZ_VERSION == garden or $IGNITION_VERSION == garden">gz-plugin2</depend>
    <depend condition="$GZ_VERSION == garden or $IGNITION_VERSION == garden">gz-sim7</depend>
    <!-- Fortress (default) -->
    <depend condition="$GZ_VERSION == fortress or $IGNITION_VERSION == fortress">ignition-plugin1</depend>
    <depend condition="$GZ_VERSION == fortress or $IGNITION_VERSION == fortress">ignition-common4</depend>
    <depend condition="$GZ_VERSION == fortress or $IGNITION_VERSION == fortress">ignition-gazebo6</depend>
    <depend condition="$GZ_VERSION == '' and $IGNITION_VERSION == ''">ignition-plugin1</depend>
    <depend condition="$GZ_VERSION == '' and $IGNITION_VERSION == ''">ignition-common4</depend>
    <depend condition="$GZ_VERSION == '' and $IGNITION_VERSION == ''">ignition-gazebo6</depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_cmake_copyright</test_depend>
    <test_depend>ament_cmake_cpplint</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>
    <test_depend>ament_cmake_uncrustify</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>