<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>leo_gz_worlds</name>
    <version>1.0.0</version>

    <description>Gazebo worlds for Leo Rover simulation in ROS 2</description>

    <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
    <license>MIT</license>
    <author email="janek@fictionlab.pl">Jan Hernas</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_cmake_copyright</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <architecture_independent/>
    </export>
</package>