<?xml version="1.0"?>
<package format="3">
  <name>leo_simulator</name>
  <version>1.1.0</version>
  <description>
    Metapackage of software for Leo Rover Gazebo simulation for ROS2
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="janek@fictionlab.pl">Jan Hernas</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>leo_gz_bringup</exec_depend>
  <exec_depend>leo_gz_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>