<?xml version="1.0"?>
<package format="3">
  <name>leo_simulator</name>
  <version>1.0.0</version>
  <description>
    Metapackage for Leo Rover Gazebo simulation in ROS2
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>

  <license>MIT</license>

  <author email="janek@fictionlab.pl">Jan Hernas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>leo_gz_bringup</exec_depend>
  <exec_depend>leo_gz_plugins</exec_depend>
  <exec_depend>leo_gz_worlds</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent />
  </export>
</package>